apps/staging/timetagger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timetagger
  namespace: timetagger
spec:
  ingressClassName: traefik
  rules:
    - host: time.hectorprokos.com
      http:
        paths:
          - backend:
              service:
                name: timetagger-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
